# Foundational_Models

./: .gitignore  1_GD_SAM.ipynb  1_OD.ipynb  2_QWEN_SAM.ipynb  README.md  curso_modelos_fundacionales.md  curso_modelos_fundacionales2.md  prompts_ejemplos.txt  pyproject.toml  test.ipynb
